# ProjectXYSketch

./: README.md
Heavy_Change_Queries/: CMakeLists.txt
Heavy_Change_Queries/src/: Csketch.h  FlowRadar_without_packetcount.h  HG(heavy_light).h  HG_XY_heavy.h  HG_for_XY.h  HG_for_XY_without_auxiliary.h  Heavy_guardian_flowradar.h  Heavy_guardian_list.h  Heavy_guardian_top.h  InsertableIblt.h  Pbsketch_distr_space.h  SC_InsertableIBLT.h  Space_allocation.h  XY_FlowRadar.h  main.cpp
Point_Queries/: CMakeLists.txt
Point_Queries/src/: ASketch.h  CMSketch.h  CUSketch.h  CU_For_SC.h  Pbsketch_distr_space.h  SC.h  main.cpp
Supplement/BurstSketch-master/BurstDetection/: BurstDetector.h  main.cpp  param.h
Supplement/Waving-Sketch-master/Waving/app/heavy-change/: main.cpp
Supplement/Waving-Sketch-master/Waving/frequent/: CMakeLists.txt  WavingSketch.h  benchmark.h  main.cpp
Supplement/heavy-keeper-project-master/: CMakeLists.txt  CSS.h  LossyCounting.h  heavykeeper.h  main.cpp  params.h  spacesaving.h  ssummary.h
Top_k_Queries/: CMakeLists.txt
Top_k_Queries/src/: ASketch.h  BOBHash32.h  CMHeap.h  CUHeap.h  CU_For_SC.h  FilterCUXY.h  Filter_CUXY.h  Heavy_guardian_heap.h  Heavy_guardian_point.h  Heavy_guardian_top.h  Pbsketch_distr_space.h  SC.h  SC_CUSketch.h  SC_SpaceSaving.h  SpaceSaving.h  SpaceSavingUtils.h  SpaceSaving_XY.h  XYHeap.h  XY_CMSketch.h  XY_Heap_ID.h  main.cpp
